--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-theme: jekyll-theme-minimal
+theme: 'jekyll-theme-minimal'
 
-title: Re:苫バス
-description: 苫小牧市内を運行するバスの時刻表アプリケーション
-logo: assets/logo.jpg
+title: 'Re: 苫バス'
+description: '苫小牧市内を運行するバスの時刻表アプリケーション'
+logo: 'assets/logo.jpg'
 # show_downloads: [false]
 # google_analytics: [Your Google Analytics tracking ID]
