--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ theme: 'jekyll-theme-minimal'
 
 title: 'Re: 苫バス'
 description: '苫小牧市内を運行するバスの時刻表アプリケーション'
-logo: 'assets/logo.jpg'
+logo: 'assets/img/logo.jpg'
 # show_downloads: [false]
 # google_analytics: [Your Google Analytics tracking ID]
