--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,5 +3,7 @@ theme: 'jekyll-theme-minimal'
 title: 'Re: 苫バス'
 description: '苫小牧市内を運行するバスの時刻表アプリケーション'
 logo: 'assets/img/logo.jpg'
+store_url:
+  appstore: https://apps.apple.com/jp/app/id951070715
 # show_downloads: [false]
 # google_analytics: [Your Google Analytics tracking ID]
